Version: 0.3.0
Date: ??. ??. ????
  Features:
    - Added Simple mode - this mode generates only up to 3 recipes - reversed ingredients, reversed result and both reversed, skipping the other permutations. Disabled by default. If enabled, it will remove all the skipped permutations from existing saves upon loading them
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 25. 07. 2020
  Info:
    - Some code cleanup
    - Reversed iteration order of the permutations when selecting a permutation
  Bugfixes:
    - Added SuperExpensiveMode as an optional dependency
    - Fixed code for permutation generation for expensive mode
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 16. 06. 2020
  Info:
    - Change Factorio version to 0.18
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 16. 06. 2020
  Bugfixes:
    - Add H2O as an optional dependency
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 21. 01. 2020
  Bugfixes:
    - Add Momo +(30)Science Mod as an optional dependency
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 15. 01. 2020
  Bugfixes:
    - Account for products being defined with a table without type property (default value is "item")
    - Add Angel's Petrochem Processing as an optional dependency
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 30. 08. 2019
  Bugfixes:
    - Account for ItemProductProtope being specified as table with numbered keys
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 16. 03. 2019
  Bugfixes: