@@ -1,7 +1,10 @@
+---------------------------------------------------------------------------------------------------
 Version: 0.3.0
 Date: ??. ??. ????
   Features:
     - Added Simple mode - this mode generates only up to 3 recipes - reversed ingredients, reversed result and both reversed, skipping the other permutations. Disabled by default. If enabled, it will remove all the skipped permutations from existing saves upon loading them
+  Info:
+    - Store recipe names in the permutation control registry instead of table references. This should reduce saving and loading speeds a bit. Saving and loading speeds were not a problem, just making some optimazations
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.1
 Date: 25. 07. 2020
